--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "worldcupbracket",
-  "version": "0.0.0",
+  "name": "wc14-bracket",
+  "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
     "connect-livereload": "~0.3.2",
