--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "worldcupbracket",
-  "version": "0.0.0",
+  "name": "wc14-bracket",
+  "private": true,
   "dependencies": {
     "jquery": "~2.1.0",
     "underscore": "~1.6.0",
